maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: ':' expected but ',' found.
def tracechemin(x,y,nb){
                 ^JediEscaper:46: error: identifier expected but '}' found.
}
^